fix: Corrigindo espaçamento antes da section id=content_list

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
           </p>
       </section>
       <div class="space"></div>
+      <div class="space_2"></div>
       <section id="content_list">
         <div id="list">
           <headline>PARA OS AMANTES DE HISTÓRIA</headline>
